[project]
name = "ks-ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LeonJung", email = "jung.ryuwoon@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ks-ws = "ks_ws:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"
