[project]
name = "ks-ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LeonJung", email = "jung.ryuwoon@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=48.0.0",
    "duckdb>=1.5.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "websockets>=16.0",
]

[project.scripts]
ks-ws = "ks_ws:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
